Model remaining app client responses
